--- a/src/lang/blanc.json
+++ b/src/lang/blanc.json
@@ -7,6 +7,7 @@
     "msg.lang": "Change me",
     "msg.lang.change.en": "Change me",
     "msg.lang.change.de": "Change me",
+    "msg.lang.change.yourlang": "Change me",
     "msg.lang.invalid": "Change me",
     "msg.invalid.option": "Change me",
     "msg.encode.text": "Change me",
