--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -1,7 +1,14 @@
 {
-    "msg.start": "Was willst du machen? (encode/decode/settings)",
-    "msg.option": "Was willst du ändern? (language)",
-    "msg.lang": "Welche Sprache willst du benutzen? (de/en/es)",
+    "msg.start": "Was willst du machen?",
+    "msg.start.options.encode": "Verschlüsseln",
+    "msg.start.options.decode": "Entschlüsseln",	
+    "msg.start.options.settings": "Einstellungen",
+    "msg.option": "Was willst du ändern?",
+    "msg.option.language": "Sprache",
+    "msg.lang": "Welche Sprache willst du benutzen?",
+    "msg.lang.de": "Deutsch",
+    "msg.lang.en": "Englisch",
+    "msg.lang.es": "Spanisch",
     "msg.lang.change.en": "Language changed to English",
     "msg.lang.change.de": "Sprache geändert auf Deutsch",
     "msg.lang.change.es": "Cambiaste el idioma. Ahora estás usando español.",
