--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -1,6 +1,13 @@
-{   "msg.start": "¿Qué opción quieres usar? (encode/decode/settings)",
-    "msg.option": "¿Qué te gustaría cambiar al respecto? (language)",
-    "msg.lang": "¿Qué idioma quieres usar? (de/en/es)",
+{   "msg.start": "¿Qué opción quieres usar?",
+    "msg.start.options.encode": "Codificar",
+    "msg.start.options.decode": "Decodificar",	
+    "msg.start.options.settings": "Configuración",
+    "msg.option": "¿Qué te gustaría cambiar al respecto?",
+    "msg.option.language": "Idioma",
+    "msg.lang": "¿Qué idioma quieres usar?",
+    "msg.lang.de": "Alemán",
+    "msg.lang.en": "Inglés",
+    "msg.lang.es": "Español",
     "msg.lang.change.en": "Language changed to English",
     "msg.lang.change.de": "Sprache geändert auf Deutsch",
     "msg.lang.change.es": "Cambiaste el idioma. Ahora estás usando español.",
