--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -15,6 +15,10 @@
     "msg.lang.change.de": "Sprache geändert auf Deutsch",
     "msg.lang.change.es": "Cambiaste el idioma. Ahora estás usando español.",
     "msg.lang.invalid": "Language not found",
+    "msg.keysave": "Select the key you want to change",
+    "msg.editkey": "What should be the new key? (32 characters)",
+    "msg.key.invalid": "Key is not valid",
+    "msg.key.change.key": "Key changed successfully",
     "msg.invalid.option": "Invalid option",
     "msg.encode.text": "What do you want to encode?",
     "msg.encode.key": "Which key do you want to use? (32 characters)",
