--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -12,6 +12,10 @@
     "msg.lang.change.de": "Sprache geändert auf Deutsch",
     "msg.lang.change.es": "Cambiaste el idioma. Ahora estás usando español.",
     "msg.lang.invalid": "No se encontró este idioma",
+    "msg.keysave": "Selecciona la tecla que quieres cambiar",
+    "msg.editkey": "¿A qué quiere cambiar la clave? (32 caracteres)",
+    "msg.key.invalid": "Esta clave no es válida. (Demasiado corto/demasiado largo)",
+    "msg.key.change.key": "La clave fue cambiada con éxito",
     "msg.invalid.option": "Esta opción es inválida",
     "msg.encode.text": "¿Qué quieres cifrar?",
     "msg.encode.key": "¿Qué token quieres usar? (32 caracteres)",
@@ -21,5 +25,19 @@
     "msg.decode.text": "¿Qué quieres hacer legible?",
     "msg.decode.key": "¿Qué token se debe usar para el descifrado? (32 caracteres",
     "msg.decode.iv": "¿Qué IV debe usarse para decodificar?",
-    "msg.decode.res": "Aquí está su texto: "
+    "msg.decode.res": "Aquí está su texto: ",
+    "msg.geoip.start": "¿Cuál es la ip que quieres localizar?",
+    "msg.geoip.true": "Sí",
+    "msg.geoip.false": "No",
+    "msg.geoip.continent": "Continente: ",
+    "msg.geoip.country": "País: ",
+    "msg.geoip.city": "ciudad: ",
+    "msg.geoip.coordinates": "Coordenadas: ",
+    "msg.geoip.region": "Región: ",
+    "msg.geoip.zip": "Código postal: ",
+    "msg.geoip.timezone": "Zona horaria: ",
+    "msg.geoip.org": "Proveedor: ",
+    "msg.geoip.mobile": "Móvil: ",
+    "msg.geoip.proxy": "Proxy: ",
+    "msg.geoip.hosting": "Centro de datos/servidor: "
 }
