--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -7,6 +7,7 @@
     "msg.option": "Was willst du ändern?",
     "msg.option.language": "Sprache",
     "msg.option.keysave": "Gespeicherte Schlüssel",
+    "msg.option.ivsave": "Gespeicherte IVs",
     "msg.lang": "Welche Sprache willst du benutzen?",
     "msg.lang.de": "Deutsch",
     "msg.lang.en": "Englisch",
@@ -16,6 +17,8 @@
     "msg.lang.change.es": "Cambiaste el idioma. Ahora estás usando español.",
     "msg.lang.invalid": "Diese Sprache wurde nicht gefunden",
     "msg.keysave": "Wähle den Schlüssel den du ändern willst",
+    "msg.ivsave": "Wähle den IV den du ändern willst",
+    "msg.ivsave.update": "Der IV wurde neu generiert",
     "msg.editkey": "Zu was willst du den Schlüssel ändern? (32 Zeichen)",
     "msg.key.invalid": "Dieser Schlüssel ist ungültig. (Zu kurz/Zu lang)",
     "msg.key.change.key": "Der Schlüssel wurde erfolgreich geändert",
