--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -7,6 +7,7 @@
     "msg.option": "What do you want to change?",
     "msg.option.language": "Language",
     "msg.option.keysave": "Saved keys",
+    "msg.option.ivsave": "Saved IVs",
     "msg.lang": "What language do you want to use?",
     "msg.lang.de": "German",
     "msg.lang.en": "English",
@@ -16,6 +17,8 @@
     "msg.lang.change.es": "Cambiaste el idioma. Ahora estás usando español.",
     "msg.lang.invalid": "Language not found",
     "msg.keysave": "Select the key you want to change",
+    "msg.ivsave": "Select the IV you want to change",
+    "msg.ivsave.update": "The IV has been regenerated",
     "msg.editkey": "What should be the new key? (32 characters)",
     "msg.key.invalid": "Key is not valid",
     "msg.key.change.key": "Key changed successfully",
