--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -4,6 +4,8 @@
     "msg.start.options.settings": "Configuración",
     "msg.option": "¿Qué te gustaría cambiar al respecto?",
     "msg.option.language": "Idioma",
+    "msg.option.keysave": "Claves guardadas",
+    "msg.option.ivsave": "IV guardados",
     "msg.lang": "¿Qué idioma quieres usar?",
     "msg.lang.de": "Alemán",
     "msg.lang.en": "Inglés",
@@ -13,6 +15,8 @@
     "msg.lang.change.es": "Cambiaste el idioma. Ahora estás usando español.",
     "msg.lang.invalid": "No se encontró este idioma",
     "msg.keysave": "Selecciona la tecla que quieres cambiar",
+    "msg.ivsave": "Seleccione el IV que desea cambiar",
+    "msg.ivsave.update": "El IV ha sido regenerado",
     "msg.editkey": "¿A qué quiere cambiar la clave? (32 caracteres)",
     "msg.key.invalid": "Esta clave no es válida. (Demasiado corto/demasiado largo)",
     "msg.key.change.key": "La clave fue cambiada con éxito",
