--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -2,7 +2,7 @@
     "msg.start": "Was willst du machen?",
     "msg.start.options.encode": "Verschlüsseln",
     "msg.start.options.decode": "Entschlüsseln",
-    "msg.start.options.geoip": "IP-Adresse tracken",	
+    "msg.start.options.geoip": "IP-Adresse tracken",
     "msg.start.options.settings": "Einstellungen",
     "msg.option": "Was willst du ändern?",
     "msg.option.language": "Sprache",
@@ -50,6 +50,7 @@
     "msg.geoip.org": "Internetanbieter: ",
     "msg.geoip.mobile": "Handy: ",
     "msg.geoip.proxy": "Verschlüsselt: ",
-    "msg.geoip.hosting": "Rechenzentrum/Server: "
-
+    "msg.geoip.hosting": "Rechenzentrum/Server: ",
+    "msg.end": "Drücke eine beliebige Taste um den Prozess zu beenden.",
+    "msg.file.created": "Eine Datei mit dem Ergebniss wurde auf dem Desktop erstellt."
 }
